# ff_applied_ml

./: .gitignore  00-generate-mutual-info-matrix.ipynb  fragiles.py  pyproject.toml  readme.md
code/: 01-feature-selection.ipynb  02-model-lasso.ipynb  03-model-lightgbm.ipynb  04-model-catboost.ipynb  04-model-lasso.ipynb  05-model-catboost.ipynb  05-model-lightgbm.ipynb  05-model-xgboost copy.ipynb  05-model-xgboost.ipynb  06-final-model-catboost.ipynb  06-final-model.ipynb  ff_custom_scripts.py
code/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
code/catboost_info/learn/: events.out.tfevents
metadata/: metadata.csv  metadata.json  topfeat_eviction.csv  variables.csv
scripts/: 00-create-mutual-info-matrix.ipynb  01-eda-mutual-info.ipynb  02-create-metadata.ipynb  03-feature-selection.ipynb  04-model-lasso.ipynb  05-model-lightgbm.ipynb  06-model-xgboost.ipynb  07-model-catboost.ipynb  Fragile Family starter code.ipynb  ff_custom_scripts.py  leaderboard.ipynb  model-bayes-lightgbm.ipynb  model-bayes-linear-run2503.ipynb  model-bayes-xgboost-run2503 copy.ipynb  model-bayes-xgboost-run2503.ipynb  model-catboost.ipynb  model-cv-lasso-2503.ipynb
scripts/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
scripts/catboost_info/learn/: events.out.tfevents
