[tool.poetry]
name = "ff_applied_ml"
version = "0.1.0"
description = ""
authors = ["XXXX"]
readme = "README.md"
packages = [{include = "ff_applied_ml"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ffmetadata-py = {git = "https://github.com/fragilefamilieschallenge/ffmetadata-py.git"}
numpy = "<1.24.0"
setuptools = "^67.6.0"
catboost = "^1.1.1"
tensorflow = "^2.11.0"
imblearn = "^0.0"
ipywidgets = "^8.0.4"
xgboost = "^1.7.4"
keras = "^2.11.0"
keras-tuner = "^1.3.0"
category-encoders = "^2.6.0"
autokeras = "^1.1.0"
nni = "^2.10"
torch = "^2.0.0"
scikit-optimize = "^0.9.0"
shap = "^0.41.0"
yellowbrick = "^1.5"
ipykernel = "^6.22.0"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
