[tool.poetry]
name = "ff_applied_ml"
version = "0.1.0"
description = ""
authors = ["XXXX"]
readme = "README.md"
packages = [{include = "ff_applied_ml"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ffmetadata-py = {git = "https://github.com/fragilefamilieschallenge/ffmetadata-py.git"}
setuptools = "^67.6.0"
imblearn = "^0.0"
ipywidgets = "^8.0.4"
xgboost = "^1.7.4"
keras = "^2.11.0"
torch = "^2.0.0"
ipykernel = "^6.22.0"
seaborn = "^0.8"
scikit-optimize = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
